[package]
name = "cftp"
description = "A small, fast and highly customizable FTP server library."
authors = ["notnullptr"]
version = "0.1.0"
edition = "2024"
readme = "../../README.md"
license = "Apache-2.0"
repository = "https://github.com/not-nullptr/cftp"
homepage = "https://github.com/not-nullptr/cftp"
documentation = "https://docs.rs/cftp"

[features]
default = ["tls"]
tls = ["futures-rustls", "webpki-roots"]
tcp = ["tokio", "tokio-util", "openport"]

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tracing = "0.1.41"

tokio = { version = "1.47.0", features = ["net"], optional = true }
futures-rustls = { version = "0.26.0", optional = true }
webpki-roots = { version = "1.0.4", optional = true }
openport = { version = "0.1.1", features = ["rand"], optional = true }
tokio-util = { version = "0.7.17", features = ["compat"], optional = true }
